# pgui

./: Cargo.toml  PROGRESS.md  README.md  ROADMAP.md  docker-compose.yml  init.mysql.sql
examples/: mysql_smoke.rs
src/: lib.rs  main.rs
src/services/: mod.rs
src/services/agent/: client.rs
src/services/database/: manager.rs  mod.rs  types.rs
src/services/database/mysql/: mod.rs  query.rs  schema.rs
src/services/database/postgres/: mod.rs  query.rs  schema.rs
src/services/sql/: code_action_agent.rs  completion_agent.rs  completions.rs
src/services/ssh/: config.rs  mod.rs  tunnel.rs
src/services/storage/: connections.rs  mod.rs  types.rs
src/state/: actions.rs
src/themes/: themes.rs  tokyo-night.json
src/workspace/: editor.rs  workspace.rs
src/workspace/connections/: connection_form.rs
src/workspace/results/: panel.rs  table_delegate.rs
tests/: connection_types.rs  ssh_config.rs  storage_migration.rs
tests/common/: mod.rs
