[package]
name = "pgui"
version = "0.1.22"
edition = "2024"
default-run = "pgui"

[[bin]]
name = "build-app"
path = "src/bin/build_app.rs"

[[bin]]
name = "release"
path = "src/bin/release.rs"

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
async-lock = "3.4"
async-fs = "2.2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dirs = "6.0.0"
futures = "0.3"
gpui = "0.2"
gpui-component = { version = "0.5", features = ["tree-sitter-languages"] }
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
lsp-types = "0.97.0"
rust-embed = "8.2.0"
rust_decimal = "1.37.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
smol = "2"
smolhttp = "1"
sqlformat = "0.3.5"
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-native-tls", "postgres", "mysql", "sqlite", "rust_decimal", "chrono", "json" ] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25.6"
tree-sitter-sequel = "0.3.8"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
semver = "1.0.27"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "mysql_smoke"
path = "examples/mysql_smoke.rs"
